tests/fail/multiple_methods_in_main.jlite
class Main {
    Void main() {
        return;
    }
    Int test() {
        return 3;
    }
}